--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,10 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
-  # bloc: ^7.2.1
   easy_rich_text: ^0.5.7
   flutter:
     sdk: flutter
-  # flutter_bloc: ^7.3.0
+  flutter_bloc: ^7.3.0
   # http: ^0.13.4
   image_picker: ^0.8.4+2
 
