--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^7.3.0
-  # http: ^0.13.4
+  http: ^0.13.4
   image_picker: ^0.8.4+2
 
 dev_dependencies:
