--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_bloc: ^7.3.0
   http: ^0.13.4
   image_picker: ^0.8.4+2
+  flutter_simple_dependency_injection: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
